# simple-obj-parser

./: CMakeLists.txt  make_readme.py  make_release.py
.github/workflows/: construct_import_lib.yml  count_lines_of_code.yml  generate_release.yml  run_tests.yml
include/: CommonInclude.hpp  Material.hpp  Mesh.hpp  MtlParser.hpp  ObjParser.hpp  ObjParserError.hpp  PtError.hpp
obj_parser/: README.txt  obj_parser.hpp
obj_parser/include/: Material.hpp  Mesh.hpp  MtlParser.hpp  ObjParser.hpp
obj_parser/src/ObjParser/: Material.cpp  Mesh.cpp  MtlParser.cpp  ObjParser.cpp  ObjParserError.cpp
release/: obj_parser.hpp
release_v_0_0_1/: obj_parser.hpp
src/ObjParser/: Material.cpp  Mesh.cpp  MtlParser.cpp  ObjParser.cpp  ObjParserError.cpp  PtError.cpp
tests/: TestHelpers.hpp  compile_obj_parser.cpp  test_main.cpp
tests/ObjParserTests/IntegrationTests/: MtlandObjIntegrationTests.cpp
tests/ObjParserTests/UnitTests/MtlParser/: MtlParserUnitTestsFloat.cpp  MtlParserUnitTestsVec.cpp
tests/ObjParserTests/UnitTests/ObjParser/: FaceParseUnitTests.cpp  ReadsFile.cpp  VertexNormalParseUnitTests.cpp  VertexParseUnitTests.cpp  VertexTextureParseUnitTests.cpp
tests/TestAssets/: mtlTest3_1.mtl
